--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <span>Complexity Labs</span>
       </a>
       <div class="links" role="navigation" aria-label="Primary">
-        <a href="#hero">Hero</a>
+        <a href="#hero">Home</a>
         <a href="#about">About</a>
         <a href="#alignment">AI Alignment</a>
         <a href="#contact">Contact</a>
@@ -199,7 +199,7 @@
           <label for="email"><strong>Join the Safety-SDK waitlist</strong></label>
           <div class="row">
             <input id="email" name="email" type="email" inputmode="email" autocomplete="email"
-                   placeholder="you@example.com" aria-describedby="emailHelp"
+                   placeholder="you@yourstartup.com" aria-describedby="emailHelp"
                    maxlength="120" required />
             <button id="submitBtn" type="submit">Sign Up</button>
           </div>
